...
            android:text="Party"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/custom_event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/custom_event_date"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:width="260dp"
...
            android:text="0"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/custom_event_favorite_button"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/custom_event_title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
...
