...
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_birthday"
                android:layout_gravity="center"
                android:width="70dp"
                android:height="10dp"
...
